# md-slides

./: .gitignore  README.md  ebp-slides.bat  example.md  pyproject.toml  requirements.txt
.github/workflows/: build-slides.yml
docs/: app.js  index.html  style.css
md_slides/: __init__.py  cli.py  converter.py  doc_cli.py  doc_converter.py  parser.py  template.docx  template.pptx
scripts/: create_doc_template.py  create_template.py
templates/: ebp_template.pptx  templates.json
tests/: test_converter.py  test_doc_converter.py  test_parser.py
